k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /health
        pathType: Prefix
        backend:
          service:
            name:  webapp-service
            port:
              number: 80
      - path: /otusapp/Victoria/
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
